@@ -1,6 +1,7 @@
 package me.hapyl.fight.game.entity;
 
 import me.hapyl.fight.game.color.Color;
+import me.hapyl.fight.game.entity.commission.CommissionEntity;
 import org.bukkit.ChatColor;
 
 import javax.annotation.Nonnull;
@@ -9,6 +10,7 @@ import javax.annotation.Nonnull;
  * Represents a type of the entity.
  * Mainly used for health/name display.
  */
+@SuppressWarnings("deprecation") // fuck paper
 public enum EntityType {
 
     /**
@@ -21,6 +23,7 @@ public enum EntityType {
             return ChatColor.GREEN + name;
         }
     },
+
     /**
      * A friendly entity by itself, but will attack if attacked.
      */
@@ -31,6 +34,7 @@ public enum EntityType {
             return ChatColor.YELLOW + name;
         }
     },
+
     /**
      * A hostile entity, attacks players and/or other entities.
      */
@@ -41,8 +45,9 @@ public enum EntityType {
             return ChatColor.RED + name;
         }
     },
+
     /**
-     * A mini-boss entity, usually with custom abilities.
+     * A mini-boss entity, usually with named abilities.
      */
     MINIBOSS {
         @Nonnull
@@ -52,14 +57,16 @@ public enum EntityType {
         }
 
         @Nonnull
-        public String formatHealth(@Nonnull NamedGameEntity<?> entity) {
+        public String formatHealth(@Nonnull CommissionEntity entity) {
             final double health = entity.getHealth();
             final double maxHealth = entity.getMaxHealth();
             final ChatColor healthColor = getHealthColor(health, maxHealth);
 
             return healthColor + getHealthString(health);
         }
+
     },
+
     /**
      * A boss entity, usually MUCH stronger than the mini-boss and has "phases".
      */
@@ -71,9 +78,10 @@ public enum EntityType {
         }
 
         @Nonnull
-        public String formatHealth(@Nonnull NamedGameEntity<?> entity) {
+        public String formatHealth(@Nonnull CommissionEntity entity) {
             return MINIBOSS.formatHealth(entity);
         }
+
     };
 
     @Nonnull
@@ -82,7 +90,7 @@ public enum EntityType {
     }
 
     @Nonnull
-    public String formatHealth(@Nonnull NamedGameEntity<?> entity) {
+    public String formatHealth(@Nonnull CommissionEntity entity) {
         final double health = entity.getHealth();
         final double maxHealth = entity.getMaxHealth();
         final ChatColor healthColor = getHealthColor(health, maxHealth);
@@ -90,7 +98,7 @@ public enum EntityType {
         return healthColor + getHealthString(health) + "&7/&a" + getHealthString(maxHealth);
     }
 
-    protected final ChatColor getHealthColor(double health, double maxHealth) {
+    protected static ChatColor getHealthColor(double health, double maxHealth) {
         double percentHealth = health / maxHealth;
 
         if (percentHealth <= 0.25d) {
@@ -103,16 +111,19 @@ public enum EntityType {
         return ChatColor.GREEN;
     }
 
-    protected final String getHealthString(double health) {
-        if (health < 1000000) {
-            return String.format("%.0f", health);
+    @Nonnull
+    protected static String getHealthString(double health) {
+        if (health >= 1e9) {
+            return "%,.0fB".formatted(health / 1e9);
         }
-        else if (health < 1000000000) {
-            return String.format("%.1fM", health / 1e6);
+        else if (health >= 1e6) {
+            return "%,.0fM".formatted(health / 1e6);
         }
-        else {
-            return String.format("%.1fB", health / 1e9);
+        else if (health >= 1e4) {
+            return "%,.0fK".formatted(health / 1e3);
         }
+
+        return "%,.0f".formatted(health);
     }
 
 }
